--- a/Templates/BlogPost.html
+++ b/Templates/BlogPost.html
@@ -90,11 +90,14 @@
         <div class="card">
             <div class="title">
                 <h2>{{Data.Title}}</h2>
-                <div class="right" style="display: flex; flex-direction:row;align-content: center;justify-content: flex-end;">
-                    <div class="likes"><a href="http://127.0.0.1:8000/Like/{{Data.ID}}"><span class="material-symbols-outlined" style="margin-right: 5px;">
-                            favorite
-                        </span></a>
-                        <span style="margin-right: 5px;">{{Data.Likes}}</span></div>
+                <div class="right"
+                    style="display: flex; flex-direction:row;align-content: center;justify-content: flex-end;">
+                    <div class="likes"><a href="https://blog-challenge.up.railway.app/Like/{{Data.ID}}"><span
+                                class="material-symbols-outlined" style="margin-right: 5px;">
+                                favorite
+                            </span></a>
+                        <span style="margin-right: 5px;">{{Data.Likes}}</span>
+                    </div>
 
                     <a href="#"><span class="material-symbols-outlined">
                             share
