--- a/Templates/Home.html
+++ b/Templates/Home.html
@@ -26,7 +26,7 @@
         position: absolute;
         z-index: -1;
         content: "";
-        background: url("http://127.0.0.1:8000/static/Background.png");
+        background: url("https://blog-challenge.up.railway.app/static/Background.png");
         background-repeat: no-repeat;
         width: 100%;
         min-height: 100vh;
