--- a/Templates/Template.html
+++ b/Templates/Template.html
@@ -116,7 +116,7 @@
             position: absolute;
             z-index: -1;
             content: "";
-            background: url("http://127.0.0.1:8000/static/Login.png");
+            background: url("https://blog-challenge.up.railway.app/static/Login.png");
             background-repeat: no-repeat;
             width: 100%;
             height: 100vh;
