--- a/Templates/Template.html
+++ b/Templates/Template.html
@@ -243,8 +243,7 @@
                     <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-content">
-                    <a href="#">Your Posts</a>
-                    <a href="#">Link 2</a>
+                    <a href={%url 'YourPosts' %}>Your Posts</a>
                     <a href={%url 'Signout' %}>Signout</a>
                 </div>
             </div>
